Cross- Code Smells Fixes And New Frontend Tests